--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -15,7 +15,7 @@ PORT ?= /dev/ttyACM0
 AVRDUDE=avrdude
 
 TARGET=lab1
-OBJECT_FILES=$(TARGET).o log.o
+OBJECT_FILES=$(TARGET).o log.o leds.o timers.o
 
 all: $(TARGET).hex
 
