lab1: minor updates to eclipse files to work with laptop

--- a/lab1/.settings/de.innot.avreclipse.core.prefs
+++ b/lab1/.settings/de.innot.avreclipse.core.prefs
@@ -19,5 +19,11 @@ avrtarget/avrdude/ProgrammerID=programmerconfig.1
 avrtarget/avrdude/UseCounter=false
 avrtarget/avrdude/WriteEEPROM=false
 avrtarget/avrdude/WriteFlash=true
-avrtarget/perConfig=false
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/ClockFrequency=20000000
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/ExtRAMSize=0
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/ExtendedRAM=false
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/MCUType=atmega1284p
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/UseEEPROM=false
+avrtarget/de.innot.avreclipse.toolchain.winavr.base.2134713204/UseExtendedRAMforHeap=true
+avrtarget/perConfig=true
 eclipse.preferences.version=1
