lab1: menu: make a real parser for the menu and get basic stuff working

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -16,7 +16,7 @@ PORT ?= /dev/ttyACM0
 AVRDUDE=avrdude
 
 TARGET=lab1
-OBJECT_FILES=$(TARGET).o log.o leds.o timers.o
+OBJECT_FILES=$(TARGET).o log.o leds.o timers.o scheduler.o menu.o
 
 all: $(TARGET).hex
 
