--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -32,12 +32,12 @@ clean:
 %.s: %.c
 	$(CC) -mmcu=$(MCU) -fverbose-asm -S $<
 
-%.lst: %.s
-	$(AS) -a -mmcu=$(MCU) $< > test.lst
+lab1.lst: lab1.obj
+	avr-objdump -d -M mips -S lab1.obj > lab1.lst
 
 program: $(TARGET).hex
 	$(AVRDUDE) -p $(AVRDUDE_DEVICE) -c avrisp2 -P $(PORT) -U flash:w:$(TARGET).hex
 
 .PHONY: release
 release:
-	tar -czvf seng5831-embedded-assignment1-`date +%d_%m_%y`.tar.gz Makefile *.c *.h
+	tar -czvf seng5831-embedded-lab1-`date +%d_%m_%y`.tar.gz Makefile *.txt *.c *.h
