--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -40,4 +40,4 @@ program: $(TARGET).hex
 
 .PHONY: release
 release:
-	tar -czvf seng5831-embedded-lab1-`date +%d_%m_%y`.tar.gz Makefile *.txt *.c *.h
+	tar -czvf seng5831-embedded-lab1-`date +%m_%d_%y`.tar.gz Makefile *.txt *.c *.h
