lab1: Rename lab1.txt to README.md with markdown syntax

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -11,6 +11,7 @@ CC=avr-gcc
 AS=avr-as
 OBJ2HEX=avr-objcopy
 LDFLAGS=-Wl,-gc-sections -lpololu_$(DEVICE) -Wl,-relax
+PANDOC=pandoc --from markdown --to html --standalone
 
 PORT ?= /dev/ttyACM0
 AVRDUDE=avrdude
@@ -22,6 +23,9 @@ all: $(TARGET).hex
 
 clean:
 	rm -f *.o *.hex *.obj *.hex
+
+docs: README.md
+	$(PANDOC) README.md > README.html
 
 %.hex: $(TARGET).obj
 	$(OBJ2HEX) -R .eeprom -O ihex $< $@
