lab2: progress toward working linear interpolator (has bugs)

--- a/lab2-pdcontroller/Makefile
+++ b/lab2-pdcontroller/Makefile
@@ -17,7 +17,7 @@ PORT ?= /dev/ttyACM0
 AVRDUDE=avrdude
 
 TARGET=lab2
-OBJECT_FILES=$(TARGET).o log.o timers.o scheduler.o motor.o cli.o deque.o
+OBJECT_FILES=$(TARGET).o log.o timers.o scheduler.o motor.o cli.o deque.o interpolator.o
 
 all: $(TARGET).hex
 
